# agent-hub

./: README.md  storylines.yaml  tutorial.md
academic-research/: GEMINI.md  agent.yaml  pyproject.toml
blog-writer/: GEMINI.md  agent.yaml  deploy.sh  pyproject.toml
brand-search-optimization/: agent.yaml  setup.sh
claim-adjudication-agent/: agent.yaml
creative/: README.md  agent.yaml
customer-service/: GEMINI.md  agent.yaml  deploy.sh  pyproject.toml
data-science/: agent.yaml  setup.sh
financial-advisor/: GEMINI.md  agent.yaml  deploy.sh  pyproject.toml
invoice-processing/: GEMINI.md  agent.yaml  deploy.sh  pyproject.toml
llm-auditor/: GEMINI.md  agent.yaml  deploy.sh  pyproject.toml
nurse-handover/: GEMINI.md  agent.yaml  pyproject.toml
personalized-shopping/: GEMINI.md  agent.yaml  pyproject.toml
product-pitch-agent/: README.md  agent.yaml  cloudbuild.yaml  deploy.sh  (+3 more)
product-pitch-agent/mcp_server/: Dockerfile  README.md  __init__.py  cloud_run_jobs.py  deploy.sh  deployed_environment.md  job_manager.py  pipeline_runner.py  pyproject.toml  server.py
product-pitch-agent/mcp_server/pipeline/: __init__.py  common_utils.py  config.py  creative_engine.py  enums.py  evaluator.py  gcs_service.py  image_evaluator.py  image_generator.py  image_prompts.py  log.py  metadata.py  orchestrator.py  scene_script.py  user_context.py  vertex_ai_service.py  video_evaluator.py  video_generator.py  video_postprocess.py  video_prompts.py
product-pitch-agent/mcp_server/tests/: __init__.py  conftest.py  create_test_excel.py  test_dataset.xlsx  test_mcp_e2e.py
(+83 files in other folders)
